fix: remove theme decloration to app.tsx add style for dark mode

--- a/lessons/40/hw40/src/components/Modal/Modal.css
+++ b/lessons/40/hw40/src/components/Modal/Modal.css
@@ -29,10 +29,16 @@
 }
 .close {
     position: absolute;
-    font-size: 20px;
+    font-size: 1.3rem;
     top: 10px;
     right: 10px;
     cursor: pointer;
+    transition: 0.5s ease all;
+}
+.close:hover {
+
+    transform: scale(1.2);
+
 }
 .closeBtn {
     position: absolute;
